--- a/.gitignore
+++ b/.gitignore
@@ -12,10 +12,15 @@
 
 # testing
 /coverage
+*.lcov
+/test-results/
+/playwright-report/
+/test-coverage/
 
 # next.js
 /.next/
 /out/
+/.swc/
 
 # production
 /build
@@ -39,3 +44,6 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# documentation (internal development files)
+CODE_DOCUMENTATION_SUMMARY.md
